--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.1",
         "admin-lte": "^3.0.5",
-        "vue-router": "^3.4.8"
+        "chart.js": "^2.9.4",
+        "vue-chartjs": "^3.5.1",
+        "vue-progressbar": "^0.7.5",
+        "vue-router": "^3.4.8",
+        "vuetify": "^2.3.16"
     }
 }
